Alignment fix

--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -380,7 +380,7 @@
 
 .main-panel {
     position: relative;
-    // float: right;
+    float: right;
     width: $sidebar-width;
     background-color: #08223d;
     color: white;
